# ocr-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  schemas.py
app/services/: ocr_service.py
